--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Calculator</title>
 	<link rel="stylesheet" href="style.css">
-	<link href="http://fonts.cdnfonts.com/css/scientific-calculator-lcd" rel="stylesheet">
+	<link href="https://fonts.cdnfonts.com/css/scientific-calculator-lcd" rel="stylesheet">
 </head>
 <body>
 	<h1>Calculadora</h1> 
